%% FASE 3 — OPSI 1 ER: struktur tabel TIDAK berubah, hanya penjaganya
%% render: mmdc -i 03-tobe-1-er.mmd -o 03-tobe-1-er.svg
erDiagram

  WorkOrder ||--o| DetailPesananProduksi : "detail_produksi (1-1, CASCADE)"
  WorkOrder ||--o{ WorkOrderPenugasan    : "penugasan (CASCADE)"
  WorkOrder ||--o{ WorkOrderPesan        : "pesan_chat (CASCADE)"

  Profil ||--o{ WorkOrder          : "dibuat_oleh (PROTECT)"
  Profil ||--o{ WorkOrder          : "diselesaikan_oleh (PROTECT, null)"
  Profil ||--o{ WorkOrderPenugasan : "staff (PROTECT) -- DIUBAH dari CASCADE"
  Profil ||--o{ WorkOrderPesan     : "pengirim (PROTECT) -- DIUBAH dari CASCADE"

  CounterDokumen ||--o{ WorkOrder : "sumber nomor (BARU) core/models.py:181"

  WorkOrder {
    bigint  id                  PK
    varchar nomor               "unique -- kini dari CounterDokumen, bukan order_by().last()"
    varchar kategori            "UMUM|PRODUKSI|PRIVATE"
    varchar judul
    text    deskripsi
    varchar aturan_penyelesaian "SALAH_SATU|SEMUA|PIC"
    date    tanggal
    date    deadline            "null"
    bool    selesai             "TETAP boolean — kontrak frontend"
    text    catatan_selesai
    datetime waktu_selesai      "null"
    bigint  diselesaikan_oleh   FK
    bigint  dibuat_oleh         FK
    datetime dibuat_pada
    datetime diubah_pada        "BARU — dari core.TimeStampedModel"
  }

  DetailPesananProduksi {
    bigint  id         PK
    bigint  work_order FK
    varchar nama_item
    varchar unit
    varchar stiker
  }

  WorkOrderPenugasan {
    bigint id                  PK
    bigint work_order          FK
    bigint staff               FK "PROTECT"
    bool   is_pic              "BARU: partial unique — tepat 1 PIC per WO (INV-9)"
    bool   is_selesai_personal
  }

  WorkOrderPesan {
    bigint   id         PK
    bigint   work_order FK
    bigint   pengirim   FK "PROTECT"
    text     teks
    datetime dibuat_pada
  }

  CounterDokumen {
    bigint  id      PK
    varchar jenis   "'WO' — select_for_update, kolom numerik"
    int     urutan
  }

  Profil {
    bigint  id PK "dipakai LANGSUNG sebagai staff_id — tidak ada profil_staff_id"
    varchar username
    varchar nama_lengkap
  }
